@@ -127,7 +127,7 @@ perl = 5.010
 Minion = 0
 Mojolicious = 7
 Beam::Wire = 1.019
-Beam::Runner = 0.006
+Beam::Runner = 0.014
 
 ;-- Common prereqs with minimum version requirements
 ;Path::Tiny = 0.072 ; Fixes issues with File::Path
